<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#2b525515">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:id="@+id/number"
                android:layout_gravity="center_horizontal|top"
                android:inputType="number|numberSigned|numberDecimal"
                android:background="#ffffe4aa"
                android:textColor="#ff2e0516"
                android:typeface="normal"
                android:hint="@string/entry_number" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/number"
                android:stretchColumns="1"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/hex_row">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="103dp"
                        android:text="@string/hexadecimal"
                        android:id="@+id/hexadecimal"
                        android:textColor="#ff000000"
                        android:background="#78ebe8c1"
                        android:gravity="center"
                        android:layout_column="0"
                        android:layout_span="2" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:baselineAligned="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/sign_label"
                        android:id="@+id/id_sign"
                        android:layout_column="1"
                        android:textColor="#ff000000"
                        android:textStyle="bold|italic"
                        android:textSize="@dimen/label_size" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/sign_number"
                        android:id="@+id/sign"
                        android:layout_column="1"
                        android:background="#ffd3af2b"
                        android:textSize="@dimen/result_view"
                        android:textColor="#ff000000"
                        android:gravity="center_vertical|center_horizontal" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/label_exponent"
                        android:id="@+id/id_exponent"
                        android:layout_column="1"
                        android:textStyle="bold|italic"
                        android:textSize="@dimen/label_size"
                        android:textColor="#ff000000" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/exponent_number"
                        android:id="@+id/exponent"
                        android:layout_column="1"
                        android:background="#ffd3af2b"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/result_view" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/label_significant"
                        android:id="@+id/id_significant"
                        android:layout_column="1"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/label_size"
                        android:textStyle="bold|italic" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/significant_number"
                        android:id="@+id/significant"
                        android:layout_column="1"
                        android:background="#ffd3af2b"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/result_view"
                        android:gravity="center_vertical|center_horizontal" />
                </TableRow>
            </TableLayout>

        </RelativeLayout>
    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.tredolf.demo.ieee754converter.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
